# stock-analysis-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  stock-reports.yml
config/: __init__.py  settings.py
scripts/: backfill.py  collect_xueqiu_local.py  init_db.py  run.py  run_job.py
src/: __init__.py
src/agents/: __init__.py  alert_agent.py  financial_agent.py  industry_agent.py  orchestrator.py  sentiment_agent.py
src/analysis/: __init__.py  competitor.py  financial.py  llm_client.py  sentiment.py
src/collectors/: __init__.py  base.py  futu.py  hkex.py  reddit.py  tiger.py  xueqiu.py  yahoo_finance.py
src/db/: __init__.py  database.py  models.py
src/db/migrations/: 001_init.sql
src/reporters/: __init__.py  base.py  feishu.py  markdown.py  templates.py
src/scheduler/: __init__.py  jobs.py
tests/: __init__.py  conftest.py  test_collectors.py  test_sentiment.py
