[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stock-analysis-agent"
version = "0.1.0"
description = "多源数据采集与情绪分析 Agent — 汇量科技 1860.HK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenClaw Agent" }]

dependencies = [
    "playwright>=1.44",
    "praw>=7.7",
    "yfinance>=0.2",
    "anthropic>=0.25",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
    "redis>=5.0",
    "apscheduler>=3.10",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
